@@ -1,5 +1,7 @@
 2006-10-02  Jb Evain  <jbevain@gmail.com>
 
+	* implement IList on the named collections.
+
 	* implement the first bits of Win32 resources handling.
 
 	* Mono.Cecil/ReflectionHelper.cs:
